force-app/main/default/objects/LoanRequest__c/fields/AlertSent__c.field-meta.xml
<CustomField>
    <fullName>AlertSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Sent</label>
    <type>Checkbox</type>
</CustomField>