force-app/main/default/objects/LoanRequest__c/fields/AssignedManager__c.field-meta.xml
<CustomField>
    <fullName>AssignedManager__c</fullName>
    <label>Assigned Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Loan Requests</relationshipLabel>
    <relationshipName>AssignedLoanRequests</relationshipName>
    <type>Lookup</type>
</CustomField>