force-app/main/default/objects/LoanRequest__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Loan Requests</relationshipLabel>
    <relationshipName>LoanRequests</relationshipName>
    <type>Lookup</type>
</CustomField>