force-app/main/default/objects/LoanRequest__c/fields/LoanNumber__c.field-meta.xml
<CustomField>
    <fullName>LoanNumber__c</fullName>
    <displayFormat>LOAN-{00000}</displayFormat>
    <label>Loan Number</label>
    <startingNumber>1</startingNumber>
    <type>AutoNumber</type>
</CustomField>