force-app/main/default/objects/LoanRequest__c/fields/TermMonths__c.field-meta.xml
<CustomField>
    <fullName>TermMonths__c</fullName>
    <label>Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>